# CBGen

./: Adapter.astate  CBGen  CBGen.cc  CMakeLists.txt  README.md  adapt.cc  phonoCorr.astate
Diracxx-master/: #TCrossSection.cxx#  .gitignore  BetheHeitler.C  Brems.C  Complex.h  Compton.C  DiracPackage.h  LorentzPackage.h  Makefile  Pairs.C  PauliPackage.h  Qpolar.C  README.md  TCrossSection.cxx  TCrossSection.h  TCrossSectionLinkDef.h  TCrossSection_v1.cxx  TCrossSection_v1.h  TCrossSection_v1LinkDef.h  TDiracMatrix.cxx  TDiracMatrix.h  TDiracMatrixLinkDef.h  TDiracSpinor.cxx  TDiracSpinor.h  TDiracSpinorLinkDef.h  TFourVectorComplex.cxx  TFourVectorComplex.h  TFourVectorComplexLinkDef.h  TFourVectorReal.cxx  TFourVectorReal.h  TFourVectorRealLinkDef.h  TLepton.cxx  TLepton.h  TLeptonLinkDef.h  TLorentzBoost.cxx  TLorentzBoost.h  TLorentzBoostLinkDef.h  TLorentzTransform.cxx  TLorentzTransform.h  TLorentzTransformLinkDef.h  (+28 more)
include/: AdaptiveSampler.hh  AdaptiveSampler.hh.mine  AdaptiveSampler.hh.new  AdaptiveSampler.hh.old  AdaptiveSampler.hh~  Amor.hh.back  Amor.hh~  Phono.hh  Phono.hh~  phonoCorr.hh.old  phonoZero.hh.old
macros/: CheckPol3.C  MakeHists.C  MakeHists.C~  MakeHistsOld.C  MakeHists_C.d  MakeHists_C_ACLiC_dict_rdict.pcm  MakePlots.C  MakePlots.C~  PolFit.C  PolFit.C~  PolFit_C.d  PolFit_C_ACLiC_dict_rdict.pcm  PolPlots1.root  PolPlots10.root  PolPlots100.root  PolPlots1000.root  SingleFit.C  SingleFit.C~  SingleFit_C.d  SingleFit_C_ACLiC_dict_rdict.pcm  SinglePol.C  outPlots.root  outPlots0.root  outPlots00.root  outPlots000.root  outPlots0001.root  outPlots00012.root  outPlots001.root  outPlots01.root  outPlots012.root  outPlots0K.root  outPlots0K0deg.root  outPlots12.root  outPlots2.root  outPlots3.root  outPlots4.root  outPlots5.root  outPlots6.root  outPlotsTemp.root  outPlotsTemp0.root  (+13 more)
scripts/: farmAdapt.py  farmAdapt.py.noArray  farmAdapt.py~  farmSimNew.py  jobAdapt.py  jobAdapt.py.noArray  jobAdapter.py  jobCBGen.py  jobSimNew.py  runSingle.py
setup/: #Copper.txt#  Copper.txt  Copper.txt~  Copper0K.txt  Diamond.txt  DiamondBad.txt  DiamondFarah.txt  GlueXSettings.txt  MainzSettings0deg.txt  MainzSettings0deg.txt~  MainzSettingsNew.txt  MainzSettingsNew.txt~  RunSettings.txt~
src/: AdaptiveSampler.cc  Phono.cc  README.txt
